constructor accepting just factory and iterating from first element automatically